--- a/style.css
+++ b/style.css
@@ -1,3 +1,95 @@
-.bookshelf{
+.header{
+    padding: 60px;
+   text-align: center;
+   background: #1abc9c;
+   color: white;
+   font-size: 30px;
+   font-family: 'Cormorant', serif;
+ }
+
+ .section1{
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    font-family: 'Cormorant', serif;
+
+ }
+ .book-forest{
     width:300px;
+    height: 400px;
+    padding: 50px;
+    display: flex;
+    flex-direction: row;
+ }
+
+.intro{
+
+    padding: 60px;
+    display: flex;
+    flex-direction: row;
+    align-self: center;
+    font-size: 20px;
+}
+
+.fave{
+    padding: 10px;
+    font-size: 30px;
+    font-family: 'Cormorant', serif;
+
+
+}
+
+.genre{
+
+    font-size: 20px;
+    font-family: 'Cormorant', serif;
+
+}
+
+
+.top-picks{
+
+    font-size: 30px;
+    font-family: 'Cormorant', serif;
+
+}
+
+.top-picks-list{
+    padding: 0px 0px 0px 10px;
+    font-size: 20px;
+    font-family: 'Cormorant', serif;
+
+}
+
+.new{
+    padding: 10px;
+    font-size: 30px;
+    font-family: 'Cormorant', serif;
+
+}
+
+.newme{
+    padding: 10px;
+    font-size: 20px;
+    font-family: 'Cormorant', serif;
+}
+
+.s-bookshelf{
+    width:300px;
+    height: 400px;
+    padding: 50px;
+    display: flex;
+    flex-direction: row;
+
+}
+.footer{
+    padding: 100px;
+  background: #1abc9c;
+
+}
+
+.ending{
+    padding: 10px;
+    font-size: 20px;
+    font-family: 'Cormorant', serif;
 }
