--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 padding: 40px;
    text-align: center;
    color: peachpuff;
-   font-size: 30px;
+   font-size: 2vw;
    font-family: 'Petit Formal Script', cursive;
  }
 
@@ -31,14 +31,14 @@ padding: 40px;
     display: flex;
     flex-direction: row;
     align-self: center;
-    font-size: 20px;
+    font-size: 1.5vw;
     font-family: 'Cormorant', serif;
 }
 
 .fave{
     
     padding: 0px 60px 0px 60px;
-    font-size: 35px;
+    font-size: 2vw;
     font-family: 'Josefin Slab', serif;
 
 }
@@ -46,14 +46,14 @@ padding: 40px;
 .genre{
 
     padding: 0px 60px 0px 100px;
-    font-size: 20px;
+    font-size: 1.5vw;
     font-family: 'Cormorant', serif;
 }
 
 .top-picks{
 
     padding: 0px 60px 0px 60px;
-    font-size: 35px;
+    font-size: 2vw;
     font-family: 'Josefin Slab', serif;
 
 }
@@ -62,7 +62,7 @@ padding: 40px;
 .top-picks-list{
 
     padding: 0px 60px 0px 60px;
-    font-size: 20px;
+    font-size: 1.5vw;
     font-family: 'Cormorant', serif;
 
 }
@@ -70,14 +70,14 @@ padding: 40px;
 .new{
     
     padding: 0px 60px 0px 60px;
-    font-size: 35px;
+    font-size: 2vw;
     font-family: 'Josefin Slab', serif;
 
 }
 
 .newme{
     padding: 0px 60px 10px 60px;
-    font-size: 20px;
+    font-size: 1.5vw;
     font-family: 'Cormorant', serif;
 }
 
@@ -103,7 +103,7 @@ padding: 40px;
 
 .current{
     padding: 0px 60px 0px 60px;
-    font-size: 35px;
+    font-size: 2vw;
     font-family: 'Josefin Slab', serif;
 
 }
@@ -147,11 +147,11 @@ padding: 40px;
     
 .ending{
     padding: 10px 60px 10px 60px;
-    font-size: 20px;
+    font-size: 1.5vw;
     font-family: 'Cormorant', serif;
 }
 
-.footer{
+footer{
     display:flex;
     padding: 50px;
     background: peachpuff;
@@ -160,10 +160,15 @@ padding: 40px;
 
 .wonderful{
     font-family: 'Petit Formal Script', cursive;
-    font-size: 20px;
+    font-size: 1.5vw;
 }
 
 .follow{
     font-family: 'Josefin Slab', serif;
     
+}
+
+#current-time{
+    font-size: 1.5vw;
+
 }
